# AgentForge

./: .coverage  .gitignore  CLAUDE.md  MultiAgent-框架任务书.md  README.md  agent_perms_test.txt  pyproject.toml  skills-lock.json
.claude/: settings.json  statusline.cjs
.pm/inbox/task-ff3c8915/: requirements.md
architectures/dev-test-loop/config/: discord-bots.yaml  roles.yaml  (+1 more)
docs/: engine-architecture.md  phase3-report.md  phase4-report.md  phase5-report.md  phase7-report.md
examples/cpp-calculator/: Makefile
examples/devlog/: requirements.md
examples/flask-todo/: requirements.txt  run.py
gates/: regression.py  test_adapters.py  test_agent_registry.py  test_conditions.py  test_conductor.py  test_dashboard.py  test_db.py  test_db_cleanup.py  test_engine_cli.py  test_engine_process.py  test_graph_engine.py  test_heartbeat.py  test_hooks.py  test_metrics_cli.py  test_notify.py  test_orchestrator.py  test_parallel.py  test_pm_engine.py  test_pm_search.py  test_retry_cap.py  test_topology.py  test_workflow_cli.py
gates/workflows/: test_diamond.yaml  test_linear.yaml  test_rejection_loop.yaml  test_reviewer.yaml
src/devlog/: __init__.py  validators.py
src/multiagent/: __init__.py  conductor.py  conductor_cli.py  dashboard.py  db.py  engine.py  engine_cli.py  interfaces.py  metrics.py  metrics_cli.py  notify.py  notify_i18n.py  orchestrator.py  pm_cli.py  pm_discover.py  role_cli.py  workflow_cli.py
src/utils/: __init__.py  calculator_1.py  calculator_2.py  calculator_3.py  json_validator.py  logger.py  password_validator.py  task_queue.py  url_parser.py
(+99 files in other folders)
