[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent"
version = "0.1.0"
description = "Multi-Agent Collaborative Development Framework"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
multiagent = "multiagent.pm_cli:main"
